--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,11 @@
     padding: 0px;
     margin: 0px;
 }
+html,body{
+    width: 100%;
+    height: 100%;
+    font-size: 14px;
+}
 .header{
     width: 100%;
     height: 45px;
@@ -101,6 +106,88 @@
     width: 100%;
     height: 420px;
     background: purple;
+    overflow: auto;
+}
+.content_list li{
+    list-style: none;
+    width: 100%;
+    height: 50px;
+    background: yellow;
+    line-height: 50px;
+    opacity: 0.7;
+    border-bottom: 1px solid rgba(255,255,255,0.8);
+    box-sizing: border-box;
+    user-select: none;
+}
+.content_list li div{
+    float: left;
+    color: #fff;
+}
+.content_list .list_check{
+    text-align: center;
+    width: 50px;
+    height: 100%;
+    background: black;
+}
+.content_list .list_check i{
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    border: 1px solid  #fff;
+    box-sizing: border-box;
+    
+}
+.content_list .list_checked i{
+    background: url("../images/icon_sprite.png") no-repeat -60px -80px;
+}
+.content_list .list_number{
+    width: 20px;
+    height: 100%;
+    background: blue;
+}
+.content_list .list_name{
+    width: 50%;
+    height: 100%;
+    background: orangered;
+}
+.list_name .list_menu{
+    margin-top: 5px;
+    float: right;
+    margin-right: 20px;
+    display: none;
+}
+.list_name .list_menu a{
+    display: inline-block;
+    width: 36px;
+    height: 36px;
+    background: url("../images/icon_list_menu.png") no-repeat 0 0;
+
+}
+.list_name .list_menu a:nth-child(1){
+    background-position: -80px 0;
+}
+.list_name .list_menu a:nth-child(2){
+    background-position: -80px -80px;
+}
+.list_name .list_menu a:nth-child(3){
+    background-position: -80px -120px;
+}
+.list_name .list_menu a:nth-child(4){
+    background-position: -80px -40px;
+}
+.content_list .list_author{
+    width: 20%;
+    height: 100%;
+    background: pink;
+}
+.content_list .list_time a{
+    display: inline-block;
+    width: 36px;
+    height: 36px;
+    background: url("../images/icon_list_menu.png") no-repeat -80px -160px;
+    float: left;
+    margin-top: 5px;
+    display: none;
 }
 .content .content_in .content_right{
     width: 400px;
@@ -108,10 +195,49 @@
     background: #000;
     float: right;
 }
-
+.content_right .song_info{
+    text-align: center;
+    line-height: 30px;
+    color: rgba(255,255,255,0.6);
+}
+.song_info .song_info_pic{
+    
+    display: inline-block;
+    width: 201px;
+    height: 180px;
+    background: url("../images/album_cover_player.png") no-repeat 0 0;
+    
+}
+.song_info_pic img{
+    position: relative;
+    width: 186px;
+    height: 186px;
+    left: -9px;
+}
+.song_info div a{
+    text-decoration: none;
+    color: #fff;
+    opacity: 0.6;
+}
+.song_info div a:hover{
+    opacity: 1;
+}
+.content_right .song_lyric{
+    margin-top: 30px;
+    background: pink;
+}
+.content_right .song_lyric li{
+    list-style: none;
+    text-align: center;
+    line-height: 40px;
+    color: rgba(255,255,255,0.6);
+}
+.content_right .song_lyric .cur{
+    color: #31c27c;
+}
 .footer{
     width:100%;
-    height:60px;
+    height:80px;
     background: green;
     position: absolute;
     left:0;
@@ -122,4 +248,174 @@
     height: 100%;
     background: pink;
     margin: 0 auto;
+
+}
+.footer_in a{
+    display: inline-block;
+    
+    text-decoration: none;
+    color: #fff;
+    background: url("../images/player.png") no-repeat 0 0;
+    margin-right: 20px;
+}
+.footer_in .music_pre{
+    line-height: 60px;
+    width: 19px;
+    height: 20px;
+    background-position: 0 -30px;
+}
+.footer_in .music_play{
+    width: 21px;
+    height: 29px;
+    background-position: -30px 0;
+    vertical-align: -5px;
+}
+.footer_in .music_play2{
+    background-position: 0 0;
+}
+.footer_in .music_next{
+    width: 19px;
+    height: 20px;
+    background-position: 0 -52px;
+}
+.footer_in .music_progress_info{
+    display: inline-block;
+    width: 670px;
+    height: 40px;
+    background:black; 
+    position: relative;
+    top: 10px;
+}
+.music_progress_info .music_progress_top{
+    width: 100%;
+    height: 30px;
+    background: orange;
+    line-height: 30px;
+    color: #fff;
+
+}
+.music_progress_top .music_progress_name{
+    float: left;
+    opacity: 0.6;
+}
+.music_progress_top .music_progress_name:hover{
+    opacity: 1;
+}
+.music_progress_top .music_progress_time{
+    float: right;
+}
+.footer_in .music_progress_bar{
+    width: 100%;
+    height: 2px;
+    background: rgba(255,255,255,0.5);
+    margin-top: 5px;
+}
+.music_progress_bar .music_progress_line{
+    width: 100px;
+    height: 2px;
+    background: #fff;
+
+}
+.music_progress_line .music_progress_dot{
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: #fff;
+    top: -4px;
+    left: 100px;
+    position: relative;
+}
+.footer_in .music_mode{
+    width: 26px;
+    height: 25px;
+    background-position: 0 -205px;
+}
+.footer_in .music_mode2{
+    width: 23px;
+    height: 20px;
+    background-position: 0 -260px;
+}
+.footer_in .music_mode3{
+    width: 25px;
+    height: 19px;
+    background-position: 0 -74px;
+}
+.footer_in .music_mode4{
+    width: 26px;
+    height: 25px;
+    background-position: 0 -232px;
+}
+.footer_in .music_fav{
+    width: 23px;
+    height: 21px;
+    background-position: 0 -96px;
+}
+.footer_in .music_fav2{
+    background-position: -30px -96px;
+}
+.footer_in .music_down{
+    width: 22px;
+    height: 21px;
+    background-position: 0 -120px;
+}
+.footer_in .music_comment{
+    width: 24px;
+    height: 24px;
+    background-position: 0 -430px;
+}
+.footer_in .music_only{
+    width: 74px;
+    height: 26px;
+    background-position: 0 -282px;
+}
+.footer_in .music_only2{
+    background-position: 0 -310px;
+}
+.footer_in .music_voice_info{
+    display: inline-block;
+    width: 100px;
+    height: 40px;
+    background: #000; 
+    position: relative;
+    top: 10px;
+}
+.music_voice_info .music_voice_icon{
+    width: 26px;
+    height: 21px;
+    background-position: 0 -144px;
+    position: absolute;
+    top: 10px;
+}
+.music_voice_info .music_voice_bar{
+    width: 70px;
+    height: 2px;
+    background: rgba(255,255,255,0.5);
+    position: absolute;
+    top: 18px;
+    right: 0;
+}
+.music_voice_info .music_voice_line{
+    width: 40px;
+    height: 2px;
+    background: #fff;
+}
+.music_voice_info .music_voice_dot{
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: #fff;
+    top: -4px;
+    left: 40px;
+    position: relative;
+}
+.bg_player_mask{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    background: url("../images/song_dxj.jpg") no-repeat 0 0;
+    background-size: cover;
+}
+._mCS_1 .mCSB_dragger .mCSB_dragger_bar{ 
+    width: 8px; 
 }
