--- a/css/index.css
+++ b/css/index.css
@@ -106,20 +106,20 @@ html,body{
     list-style: none;
     width: 100%;
     height: 50px;
-    line-height: 50px;
-    opacity: 0.7;
     border-bottom: 1px solid rgba(255,255,255,0.3);
     box-sizing: border-box;
     user-select: none;
 }
 .content_list li div{
     float: left;
-    color: #fff;
+    line-height: 50px;
+    color: rgba(255,255,255,0.6);
 }
 .content_list .list_check{
     text-align: center;
     width: 50px;
     height: 100%;
+    
 }
 .content_list .list_check i{
     display: inline-block;
@@ -127,14 +127,20 @@ html,body{
     height: 14px;
     border: 1px solid  #fff;
     box-sizing: border-box;
-    
+    opacity: 0.6;
 }
 .content_list .list_checked i{
+    opacity: 1;
     background: url("../images/icon_sprite.png") no-repeat -60px -80px;
 }
 .content_list .list_number{
     width: 20px;
     height: 100%;
+}
+.content_list .list_number2{
+
+    color: transparent !important;
+    background: url("../images/wave.gif") no-repeat left 50%;
 }
 .content_list .list_name{
     width: 50%;
@@ -164,6 +170,9 @@ html,body{
 }
 .list_name .list_menu a:nth-child(4){
     background-position: -80px -40px;
+}
+.list_menu_play2{
+    background-position: -80px -200px !important;
 }
 .content_list .list_author{
     width: 20%;
@@ -252,11 +261,11 @@ html,body{
 .footer_in .music_play{
     width: 21px;
     height: 29px;
-    background-position: -30px 0;
+    background-position: 0 0;
     vertical-align: -5px;
 }
 .footer_in .music_play2{
-    background-position: 0 0;
+    background-position: -30px 0;
 }
 .footer_in .music_next{
     width: 19px;
